:bug: Remove overflow-y property from global styles; update dependencies for compatibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -264,7 +264,6 @@ p.tag a {
 /* transitions animations  */
 * {
 	transition: all 0.3s ease;
-	overflow-y: scroll;
 }
 
 @keyframes fadeInUp {
